# cover_letter_writer

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  pyproject.toml
examples/: README.md  sample_cv.md  sample_job_description.txt  sample_recommendation.md
src/cover_letter_writer/: __init__.py  cover_letter_flow.py  main.py
src/cover_letter_writer/config/: __init__.py  config_loader.py  cover_letter_writer.yaml
src/cover_letter_writer/crews/cover_letter_crew/: __init__.py  cover_letter_crew.py
src/cover_letter_writer/crews/cover_letter_crew/config/: agents.yaml  tasks.yaml
src/cover_letter_writer/crews/reviewer_crew/: __init__.py  reviewer_crew.py
src/cover_letter_writer/crews/reviewer_crew/config/: agents.yaml  tasks.yaml
src/cover_letter_writer/crews/translator_crew/: __init__.py  translator_crew.py
src/cover_letter_writer/crews/translator_crew/config/: agents.yaml  tasks.yaml
src/cover_letter_writer/crews/writer_crew/: __init__.py  writer_crew.py
src/cover_letter_writer/crews/writer_crew/config/: agents.yaml  tasks.yaml
src/cover_letter_writer/models/: __init__.py  state_models.py
src/cover_letter_writer/tools/: __init__.py  document_parser.py  document_tools.py  pdf_reader.py  web_scraper.py
src/cover_letter_writer/utils/: __init__.py  file_handler.py  llm_factory.py
tests/: test_document_tools.py
